--- a/templates/graph.html
+++ b/templates/graph.html
@@ -54,7 +54,7 @@
             </p>
             <b>Graph.</b>
             <hr class="my-4">
-            <!-- <img src="{{ url_for('visualize') }}" class="img-fluid" alt="..."> -->
+            <img src="data:image/png;base64, {{ plot_url }}" class="img-thumbnail">
 
         </div>
     </div>
