--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -50,7 +50,12 @@
     </nav>
     <br><br>
     <div class="container">
-
+        {% with messages=get_flashed_messages() %} {% if messages %} {% for message in messages %}
+        <div class="alert alert-dark alert-dismissible fade show" role="alert">
+            <strong>Feedback send Successfully!</strong>{{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %} {% endif %} {% endwith %}
         <div class="p-3 border bg-light">
             <h1 class="font-weight-bold">Welcome To The Graph_Maker</h1><br>
             <h2 class="font-weight-bold text-center">Feedback!</h2>
