Added more Features

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,9 +61,50 @@
                     </div>
                 </div>
                 <hr class="my-4">
+                <p>
+                    <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Enter The Name Of The Graph</a>
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Enter The Name For Axis</button>
+                </p>
+                <div class="row">
+                    <div class="col">
+                        <div class="collapse multi-collapse" id="multiCollapseExample1">
+                            <div class="row g-2 pb-3">
+                                <div class="col-md">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" name="gname" id="floatingInputGrid">
+                                        <label for="floatingInputGrid">Graph</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="collapse multi-collapse" id="multiCollapseExample2">
+                            <div class="row g-2 pb-3">
+                                <div class="col-md">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" name="xname" id="floatingInputGrid">
+                                        <label for="floatingInputGrid">X-axis</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row g-2 pb-3">
+                                <div class="col-md">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" name="yname" id="floatingInputGrid">
+                                        <label for="floatingInputGrid">Y-axis</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr class="my-4">
+
                 <div class="text-center">
                     <button class="btn-lg btn-primary" type="submit">Enter</button>
                 </div>
+
                 <!-- </form> -->
             </div>
         </div>
