--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                             <div class="row g-2 pb-3">
                                 <div class="col-md">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" name="gname" id="floatingInputGrid">
+                                        <input type="text" class="form-control" name="gname" value="Graph!" id="floatingInputGrid">
                                         <label for="floatingInputGrid">Graph</label>
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
                             <div class="row g-2 pb-3">
                                 <div class="col-md">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" name="xname" id="floatingInputGrid">
+                                        <input type="text" class="form-control" name="xname" value="X-axis" id="floatingInputGrid">
                                         <label for="floatingInputGrid">X-axis</label>
                                     </div>
                                 </div>
@@ -91,7 +91,7 @@
                             <div class="row g-2 pb-3">
                                 <div class="col-md">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control" name="yname" id="floatingInputGrid">
+                                        <input type="text" class="form-control" name="yname" value="Y-Axis" id="floatingInputGrid">
                                         <label for="floatingInputGrid">Y-axis</label>
                                     </div>
                                 </div>
