Added The New URLs

--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@
                     <div class="col-md-12 text-center">
 
                         <a href="https://twitter.com/AdhikariSalman?s=09"><i class="fab fa-twitter white-text mr-4"> </i></a>
-                        <a href="https://github.com/salman-10"><i class="fab fa-github-square white-text mr-4"></i></a>
+                        <a href="https://github.com/YourDad07"><i class="fab fa-github-square white-text mr-4"></i></a>
                         <a href="https://www.linkedin.com/in/salman-adhikari-a938911bb"><i class="fab fa-linkedin-in white-text mr-4"> </i></a>
 
                     </div>
