--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="{{ url_for('upcoming_features') }}">Upcoming Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('feedb') }}">Feedback!</a>
+                        <a class="nav-link" href="{{ url_for('feedback') }}">Feedback!</a>
                     </li>
                 </ul>
             </div>
@@ -140,7 +140,7 @@
                         <li class="my-2"><a href="/">Home</a></li>
                         <li class="my-2"><a href="{{ url_for('about') }}">About</a></li>
                         <li class="my-2"> <a href="{{ url_for('Contact') }}">Contact</a></li>
-                        <li class="my-2"> <a href="{{ url_for('feedb') }}">Feedback</a></li>
+                        <li class="my-2"> <a href="{{ url_for('feedback') }}">Feedback</a></li>
                     </ul>
                 </div>
 
