--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -17,7 +17,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="shortcut icon" href="{{ url_for('static',filename='logo3.ico')}}" type="image/x-icon">
 
 
@@ -27,7 +28,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <b class="navbar-brand">Graph_Maker</b>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -42,7 +45,7 @@
                         <a class="nav-link" href="{{ url_for('upcoming_features') }}">Upcoming Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('feedb') }}">Feedback!</a>
+                        <a class="nav-link" href="{{ url_for('feedback') }}">Feedback!</a>
                     </li>
                 </ul>
             </div>
@@ -60,24 +63,28 @@
             <h1 class="font-weight-bold">Welcome To The Graph_Maker</h1><br>
             <h2 class="font-weight-bold text-center">Feedback!</h2>
 
-            <p class="lead">Thanks for Using The Graph_Maker Hope You Like This Feel Free To Post The Feedback, Your Feedbacks Are Always Welcome Here.
+            <p class="lead">Thanks for Using The Graph_Maker Hope You Like This Feel Free To Post The Feedback, Your
+                Feedbacks Are Always Welcome Here.
             </p>
             <hr class="my-4">
-            <form class="row g-3" action="/feed" method="POST">
+            <form class="row g-3" action="/feedback" method="POST">
                 <div class="col-md-4 position-relative">
                     <label for="validationCustom01" class="form-label">First name</label>
-                    <input type="text" class="form-control" name="First_Name" id="validationCustom01" placeholder="Enter Your First Name" required>
+                    <input type="text" class="form-control" name="First_Name" id="validationCustom01"
+                        placeholder="Enter Your First Name" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <div class="col-md-4 position-relative">
                     <label for="validationCustom02" class="form-label">Last name</label>
-                    <input type="text" class="form-control" name="Last_Name" id="validationCustom02" placeholder="Enter Your Last Name" required>
+                    <input type="text" class="form-control" name="Last_Name" id="validationCustom02"
+                        placeholder="Enter Your Last Name" required>
                 </div>
         </div>
         <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" name="Feed_Back" id="floatingTextarea2" style="height: 100px" required></textarea>
+            <textarea class="form-control" placeholder="Leave a comment here" name="Feed_Back" id="floatingTextarea2"
+                style="height: 100px" required></textarea>
             <label for="floatingTextarea2">Feedback</label>
         </div>
     </div>
@@ -89,7 +96,9 @@
     </form>
     <br>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 
     <footer class="page-footer bg-dark">
 
@@ -124,7 +133,7 @@
                         <li class="my-2"><a href="/">Home</a></li>
                         <li class="my-2"><a href="{{ url_for('about') }}">About</a></li>
                         <li class="my-2"> <a href="{{ url_for('Contact') }}">Contact</a></li>
-                        <li class="my-2"> <a href="{{ url_for('feedb') }}">Feedback</a></li>
+                        <li class="my-2"> <a href="{{ url_for('feedback') }}">Feedback</a></li>
                     </ul>
                 </div>
 
@@ -149,9 +158,12 @@
         </div>
     </footer>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
 </body>
 
 </html>
