--- a/templates/Jinja2_ForLoop.html
+++ b/templates/Jinja2_ForLoop.html
@@ -1,18 +1,14 @@
 {% extends 'Taking_Co-Ordinates.html' %} {% block content %} {% for i in range(value_to) %}
 <div class="container">
 
-    <div class="row align-items-center">
-        <div class="col-2">
+    <div class="row">
+        <div class="col">
             <label class="inline">Enter The X{{ i+1 }} Co-Ordinate</label>
-        </div>
-        <div class="col-3">
             <input class="inline" type="text" class="form-control" name=x{{ i }} placeholder="Enter X Co-Ordinate"
                 aria-label="First name">
         </div>
-        <div class="col-2">
+        <div class="col">
             <label class="inline">Enter The Y{{ i+1 }} Co-Ordinate</label>
-        </div>
-        <div class="col-3">
             <input class="inline" type="text" class="form-control" name=y{{ i }} placeholder="Enter Y Co-Ordinate"
                 aria-label="First name">
         </div>
