taking user from input

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,13 +44,13 @@
                         <a class="nav-link" name="feed" href="{{ url_for('feedback') }}">Feedback!</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" name="feed" href="{{ url_for('bar_chart') }}">Bar Chart</a>
+                        <a class="nav-link" name="feed" href="{{ url_for('bar_start') }}">Bar Chart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" name="feed" href="{{ url_for('pie_chart') }}">Pie Chart</a>
+                        <a class="nav-link" name="feed" href="{{ url_for('pie_start') }}">Pie Chart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" name="feed" href="{{ url_for('histogram') }}">Histogram</a>
+                        <a class="nav-link" name="feed" href="{{ url_for('hist_start') }}">Histogram</a>
                     </li>
                 </ul>
             </div>
