--- a/templates/bar_for_loop.html
+++ b/templates/bar_for_loop.html
@@ -1,20 +1,40 @@
-<form action="/bar_chart" method="post">
-    {% for i in range(value_to) %}
-    <div class="container">
+<!DOCTYPE html>
+<html lang="en">
 
-        <div class="row">
-            <div class="col">
-                <label class="inline">Enter The X{{ i+1 }} Co-Ordinate</label>
-                <input class="inline" type="text" class="form-control" name=x{{ i }} placeholder="Enter X Co-Ordinate"
-                    aria-label="First name">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bar Chart</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <h1 class="mt-3">Bar Chart</h1>
+        <form action="/bar_chart" method="POST">
+            {% for i in range(value_to) %}
+            <div class="mb-3">
+                <div class="row">
+                    <div class="col">
+                        <label for="x{{ i }}" class="form-label">Enter The X{{ i+1 }} Co-Ordinate:</label>
+                        <input type="text" name="x{{ i }}" id="x{{ i }}" class="form-control"
+                            placeholder="Enter X Co-Ordinate" required>
+                    </div>
+                    <div class="col">
+                        <label for="y{{ i }}" class="form-label">Enter The Y{{ i+1 }} Co-Ordinate:</label>
+                        <input type="text" name="y{{ i }}" id="y{{ i }}" class="form-control"
+                            placeholder="Enter Y Co-Ordinate" required>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <label class="inline">Enter The Y{{ i+1 }} Co-Ordinate</label>
-                <input class="inline" type="text" class="form-control" name=y{{ i }} placeholder="Enter Y Co-Ordinate"
-                    aria-label="First name">
-            </div>
-        </div>
+            {% endfor %}
+            <button type="submit" class="btn btn-primary">Generate Bar Chart</button>
+        </form>
+        <br><br>
+        <a href="{{ url_for('bar_start') }}" class="btn btn-primary">Go back</a>
     </div>
-    {% endfor %}
-    <button type="submit">sub</button>
-</form>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
