--- a/templates/bar_start.html
+++ b/templates/bar_start.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bar Chart</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <form action="/bar_inputs_all" method="post">
-
-        <input class="inline" type="text" class="form-control" name="bar_input" placeholder="Enter No. of Inputs:"
-            aria-label="First name">
-        <button type="submit" class="btn btn-primary">Generate Bar Chart</button>
-
-    </form>
-
+    <div class="container">
+        <form action="/bar_inputs_all" method="post" class="mt-5">
+            <div class="mb-3">
+                <label for="bar_input" class="form-label">Enter No. of Inputs:</label>
+                <input type="text" name="bar_input" id="bar_input" class="form-control"
+                    placeholder="Enter No. of Inputs:" aria-label="Number of Inputs" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Go to inputs</button>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
